--- a/src/_patterns/02-components/bolt-breadcrumb/src/breadcrumb.twig
+++ b/src/_patterns/02-components/bolt-breadcrumb/src/breadcrumb.twig
@@ -1,26 +1,27 @@
 {# Sample Usage
   {% include "@bolt/breadcrumb.twig" with {
     "contentItems": [
-      {
-        "pattern": "link",
+      include("@bolt/link.twig", {
         "text": "Home",
-        "url": "http://pega.com"
-      },
-      {
-        "pattern": "link",
-        "text": "Page",
-        "url": "http://pega.com"
-      },
+        "url": "#"
+      }),
+      include("@bolt/link.twig", {
+        "text": "Landing Page",
+        "url": "#"
+      }),
+      include("@bolt/link.twig", {
+        "text": "Sub Page",
+        "url": "#"
+      }),
 
       // Note about accessibility: if the last link is the current page, then it should have the aria-current="page" attribute. Make sure to add that in the json data.
-      {
+      include("@bolt/link.twig", {
+        "text": "Current Page",
+        "url": "#",
         "attributes": {
           "aria-current": "page"
         },
-        "pattern": "link",
-        "text": "Subpage",
-        "url": "http://pega.com"
-      }
+      }),
     ]
   } only %}
 #}
