--- a/src/_patterns/02-components/bolt-breadcrumb/demo/breadcrumb-demo.twig
+++ b/src/_patterns/02-components/bolt-breadcrumb/demo/breadcrumb-demo.twig
@@ -1,17 +1,17 @@
-{% include '@bolt/breadcrumb.twig' with {
+{% include "@bolt/breadcrumb.twig" with {
   "contentItems": [
-    include('@bolt/link.twig', {
-      'text': 'Home',
-      'url': '#'
+    include("@bolt/link.twig", {
+      "text": "Home",
+      "url": "#"
     }),
-    include('@bolt/link.twig', {
-      'text': 'Landing Page',
-      'url': '#'
+    include("@bolt/link.twig", {
+      "text": "Landing Page",
+      "url": "#"
     }),
-    include('@bolt/link.twig', {
-      'text': 'Secondary Page',
-      'url': '#'
+    include("@bolt/link.twig", {
+      "text": "Sub Page",
+      "url": "#"
     }),
-    "This page"
+    "Current Page"
   ]
-} %}
+} only %}
