--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
@@ -2,11 +2,10 @@
 
 {% for theme in schema.properties.theme.enum %}
   <p>theme: {{ theme }}</p>
-  {% embed "@utils/theme-demo.twig" with {
-    theme: theme,
-  } %}
+  {% embed "@utils/theme-demo.twig" %}
     {% block demo_content %}
       {% include "@bolt-components-blockquote/blockquote.twig" with {
+        "theme": theme,
         "size": "xxlarge",
         "alignItems": "center",
         "border": "horizontal",
