Nav bar - made sure we're pulling in the correct component

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/20-nav-bar-vspacing-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/20-nav-bar-vspacing-variation.twig
@@ -2,8 +2,29 @@
 
 {% for vspacing in schema.properties.vspacing.enum %}
   <p>Vspacing: {{ vspacing }}</p>
-  {% include '05-nav-bar.twig' with {
-    vspacing: vspacing,
+  {% include "@bolt-components-nav-bar/nav-bar.twig" with {
+    "vspacing": vspacing,
+    "title": {
+      "tag": "h2",
+      "text": "Title Text",
+      "icon": {
+        "name": "marketing-gray"
+      }
+    },
+    "links": [
+      {
+        "text": "Link 1 Text",
+        "url": "link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "link-3-url"
+      }
+    ]
   } %}
 
 {% endfor %}
