--- a/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/10-nav-bar-theme-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/10-nav-bar-theme-variation.twig
@@ -2,8 +2,29 @@
 
 {% for theme in schema.properties.theme.enum %}
   <p>Theme: {{ theme }}</p>
-  {% include '05-nav-bar.twig' with {
-    theme: theme,
+  {% include "@bolt-components-nav-bar/nav-bar.twig" with {
+    "theme": theme,
+    "title": {
+      "tag": "h2",
+      "text": "Title Text",
+      "icon": {
+        "name": "marketing-gray"
+      }
+    },
+    "links": [
+      {
+        "text": "Link 1 Text",
+        "url": "link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "link-3-url"
+      }
+    ]
   } %}
 
 {% endfor %}
