--- a/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/15-nav-bar-gradient-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/nav-bar/15-nav-bar-gradient-variation.twig
@@ -2,8 +2,29 @@
 
 {% for gradient in schema.properties.gradient.enum %}
   <p>Gradient: {{ gradient }}</p>
-  {% include '05-nav-bar.twig' with {
-    gradient: gradient == 'true',
+  {% include "@bolt-components-nav-bar/nav-bar.twig" with {
+    "gradient": gradient == 'true',
+    "title": {
+      "tag": "h2",
+      "text": "Title Text",
+      "icon": {
+        "name": "marketing-gray"
+      }
+    },
+    "links": [
+      {
+        "text": "Link 1 Text",
+        "url": "link-1-url"
+      },
+      {
+        "text": "Link 2 Text",
+        "url": "link-2-url"
+      },
+      {
+        "text": "Link 3 Text",
+        "url": "link-3-url"
+      }
+    ]
   } %}
 
 {% endfor %}
