update demo of icons

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/icon/00-icon-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/icon/00-icon-docs.twig
@@ -12,14 +12,11 @@ Twig:
   .setAttribute("color", color)
 %}
 
-<bolt-icon {{ attributes }}></bolt-icon>
+&lt;bolt-icon {{ attributes }}&gt;&lt;/bolt-icon&gt;
 
 HTML:
 
-<!-- Icon JS + twig integration -->
-<bolt-icon name="chevron-right">
-</bolt-icon>
-
+&lt;bolt-icon name=&quot;add-open&quot;&gt;&lt;/bolt-icon&gt;
 
 {% endverbatim %}
 {% endset %}
