--- a/apps/pattern-lab--workshop/src/_patterns/02-components/icon/05-icon.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/icon/05-icon.twig
@@ -1,4 +1,4 @@
-{% set name = "chevron-right" %}
+{% set name = "add-open" %}
 {% set background = "circle" %}
 {% set size = "medium" %}
 {% set color = "" %}
