--- a/apps/pattern-lab--workshop/src/_patterns/02-components/unordered-list/05-unordered-list.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/unordered-list/05-unordered-list.twig
@@ -1,4 +1,4 @@
-{
+{% include "@bolt-components-unordered-list/unordered-list.twig" with {
   "contentItems" : [
     {
       "text": "Do not include any data or information in your posts that are confidential!"
@@ -13,4 +13,4 @@
       "text": "Answer questions authoritatively and concisely. Avoid cluttering discussions with noise."
     }
   ]
-}
+} %}
