Corrected include path, added missing magnify, added formatting to helper text

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/20-device-viewer-macbook-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/20-device-viewer-macbook-variation.twig
@@ -12,5 +12,6 @@
   image: {
     src: "/images/content/screenshots/device-screenshot--desktop.jpg",
     lazyload: false
-  }
+  },
+  magnify: true
 } %}
