--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
@@ -1,7 +1,7 @@
 {% set schema = get_data('@bolt-components-device-viewer/device-viewer.schema.yml') %}
 {% set readme = source('@bolt-components-device-viewer/README.md') %}
 {% set code %} {% verbatim %}
-{% include "@bolt/device-viewer.twig" with {
+{% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "portrait",
   color: "white",
