--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/05-device-viewer.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/05-device-viewer.twig
@@ -1,4 +1,4 @@
-{% include "@bolt/device-viewer.twig" with {
+{% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "portrait",
   color: "white",
