--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/15-device-viewer-iphone8-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/15-device-viewer-iphone8-variation.twig
@@ -1,7 +1,7 @@
 {% set schema = get_data('@bolt-components-device-viewer/device-viewer.schema.yml') %}
 
 {% for color in schema.properties.color.enum %}
-  <p>Color: {{ color }} Orientation: 'portrait'</p>
+  <p>Color: {{ color }}<br />Orientation: 'portrait'</p>
   {% include "@bolt-components-device-viewer/device-viewer.twig" with {
     device: "iphone8",
     orientation: "portrait",
@@ -12,7 +12,7 @@
     }
   } %}
 
-  <p>Color: {{ color }} Orientation: 'landscape'</p>
+  <p>Color: {{ color }}<br />Orientation: 'landscape'</p>
   {% include "@bolt-components-device-viewer/device-viewer.twig" with {
     device: "iphone8",
     orientation: "landscape",
@@ -25,7 +25,7 @@
 
 {% endfor %}
 
-<p>Magnification: true Orientation: 'portrait'</p>
+<p>Magnification: true<br />Orientation: 'portrait'</p>
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "portrait",
@@ -37,7 +37,7 @@
   magnify: true
 } %}
 
-<p>Magnification: true Orientation: 'landscape'</p>
+<p>Magnification: true<br />Orientation: 'landscape'</p>
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "landscape",
