Complete page footer component

--- a/packages/components/page-footer/page-footer.twig
+++ b/packages/components/page-footer/page-footer.twig
@@ -1,7 +1,3 @@
 <footer role="contentinfo">
-    <small>
-      <p>
-        <strong>Copyright &copy; {{ "now"|date('Y') }} Pegasystems, Inc.</strong> | <a href="/styleguide/html/styleguide.html">Pattern Lab</a> | <a href="/sassdoc">Sass Docs</a>
-      </p>
-    </small>
+  {{ content }}
 </footer>
