feat: conditionally disable outline styles in Button component when not being focused on via keyboard - workaround to browser default behavior while minimizing accessibility impact

--- a/src/_patterns/02-components/bolt-button/src/button.scss
+++ b/src/_patterns/02-components/bolt-button/src/button.scss
@@ -619,6 +619,14 @@ bolt-button {
   // }
 }
 
+// Inner component wrapper to the button added when rendering via Preact - doesn't apply to the component's pre-rendered state
 .c-bolt-button__inner {
   display: flex;
+
+  &:not(.is-focused) {
+    &:focus,
+    &:active {
+      outline: none;
+    }
+  }
 }
