remove incomplete schema from demo

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/icon/00-icon-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/icon/00-icon-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-icon/icon.schema.yml') %}
+{#{% set schema = get_data('@bolt-components-icon/icon.schema.yml') %}#}
 {% set readme = source('@bolt-components-icon/README.md') %}
 {% set code %} {% verbatim %}
 Twig:
