remove incomplete link schema

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/link/00-link-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/link/00-link-docs.twig
@@ -1,4 +1,4 @@
-{% set schema = get_data('@bolt-components-link/link.schema.yml') %}
+{#{% set schema = get_data('@bolt-components-link/link.schema.yml') %}#}
 {% set readme = source('@bolt-components-link/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-link/link.twig" with {
