Background Shapes - fixed incorrect var name

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/background-shapes/00-background-shapes-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/background-shapes/00-background-shapes-docs.twig
@@ -2,7 +2,7 @@
 {% set readme = source('@bolt-components-background-shapes/README.md') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-background-shapes/background-shapes.twig" with {
-    "shapeGroups": "A"
+    "shapeGroup": "B"
 }%}
 {% endverbatim %}
 {% endset %}
