--- a/packages/components/background-shapes/src/background-shapes.twig
+++ b/packages/components/background-shapes/src/background-shapes.twig
@@ -38,6 +38,6 @@
   </div>
 </bolt-{{ componentName }}>
 
-{#{% if enable_json_schema_validation %}#}
-  {#{{ validate_data_schema('@bolt-components-background-shapes/background-shapes.schema.yml', _self) }}#}
-{#{% endif %}#}
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-background-shapes/background-shapes.schema.yml', _self) }}
+{% endif %}
