--- a/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/blockquote/30-blockquote-theme-variation.twig
@@ -12,7 +12,7 @@
         "border": "horizontal",
         "fullBleed": true,
         "logo": {
-          "invert": true,
+          "invert": "true",
           "src": "/images/content/logos/logo-paypal.svg"
         },
         "content": "<p>The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.</p>",
