--- a/packages/components/bolt-chip/src/chip.twig
+++ b/packages/components/bolt-chip/src/chip.twig
@@ -36,3 +36,7 @@
     <span class="{{ "#{baseClass}__item-text" }}">{{ text }}</span>
   </{{ tag }}>
 </bolt-chip>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-chip/chip.schema.yml', _self) }}
+{% endif %}
