Chip List - added schema validation

--- a/packages/components/bolt-chip-list/chip-list.twig
+++ b/packages/components/bolt-chip-list/chip-list.twig
@@ -43,3 +43,7 @@
   {% include "@bolt/inline-list.twig" with chipParams only %}
 
 {% endif %}
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-chip-list/chip-list.schema.yml', _self) }}
+{% endif %}
