--- a/apps/pattern-lab--workshop/src/_patterns/02-components/sticky/15-sticky-example-two.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/sticky/15-sticky-example-two.twig
@@ -1,6 +1,6 @@
 <div style="height:50vh;background-color:lightgray;"></div>
 
-{% embed "@bolt/sticky.twig" %}
+{% embed "@bolt-components-sticky/sticky.twig" %}
   {% block sticky_content %}
     <div style="color:white;background-color:red">
       First sticky item
@@ -10,7 +10,7 @@
 
 <div style="height:100vh;background-color:lightgray;"></div>
 
-{% embed "@bolt/sticky.twig" %}
+{% embed "@bolt-components-sticky/sticky.twig" %}
   {% block sticky_content %}
     <div style="background-color: white">
       Second sticky item
@@ -20,7 +20,7 @@
 
 <div style="height:100vh;background-color:lightgray;"></div>
 
-{% embed "@bolt/sticky.twig" %}
+{% embed "@bolt-components-sticky/sticky.twig" %}
   {% block sticky_content %}
     <div style="color:white;background-color:blue">
       Third sticky item
