--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/05-device-viewer.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/05-device-viewer.twig
@@ -1,7 +1,7 @@
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "portrait",
-  color: "white",
+  color: "silver",
   image: {
     src: "/images/content/screenshots/device-screenshot--phone.jpg",
     lazyload: false
