--- a/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/10-device-viewer-ipad-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/device-viewer/10-device-viewer-ipad-variation.twig
@@ -29,7 +29,7 @@
 {% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "ipad",
   orientation: "portrait",
-  color: "white",
+  color: "silver",
   image: {
     src: "/images/content/screenshots/device-screenshot--tablet-portrait.jpg",
     lazyload: false
