--- a/packages/components/bolt-device-viewer/src/device-viewer.twig
+++ b/packages/components/bolt-device-viewer/src/device-viewer.twig
@@ -80,3 +80,7 @@
     </div>
   </div>
 </bolt-device-viewer>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-device-viewer/device-viewer.schema.yml', _self) }}
+{% endif %}
