Figure - added schema validation

--- a/packages/components/bolt-figure/src/figure.twig
+++ b/packages/components/bolt-figure/src/figure.twig
@@ -37,3 +37,7 @@
     {% endif %}
   </figure>
 </bolt-{{ componentName }}>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-figure/figure.schema.yml', _self) }}
+{% endif %}
