--- a/apps/pattern-lab--workshop/src/_patterns/02-components/icon/10-icon-size-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/icon/10-icon-size-variation.twig
@@ -1,20 +1,9 @@
 {% set exampleSizes = ["small", "medium", "large", "xlarge"] %}
 
-{% set name = "add-open" %}
-{% set background = "circle" %}
-{% set color = "" %}
-
 {% for size in exampleSizes %}
-
-  {% set attributes = create_attribute(attributes | default({})) %}
-
-  {% set attributes = attributes
-    .setAttribute("name", name)
-    .setAttribute("background", background)
-    .setAttribute("size", size)
-    .setAttribute("color", color)
-  %}
-
-  <bolt-icon {{ attributes }}></bolt-icon>
-
+  {% include "@bolt-components-icon/icon.twig" with {
+    name: "add-open",
+    background: "circle",
+    size: size
+  }%}
 {% endfor %}
