--- a/packages/components/bolt-icon/src/icon.twig
+++ b/packages/components/bolt-icon/src/icon.twig
@@ -11,3 +11,7 @@
 %}
 
 <bolt-icon {{ attributes }}></bolt-icon>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-icon/icon.schema.yml', _self) }}
+{% endif %}
