chore: updating demos

--- a/src/_patterns/04-pages/d8-news/d8-media-browse--list-view.twig
+++ b/src/_patterns/04-pages/d8-news/d8-media-browse--list-view.twig
@@ -34,7 +34,7 @@
               ],
               "buttons": [
                 {
-                  "text": "Read more",
+                  "text": "MARTECH ADVISOR",
                   "url": "http://www.google.com",
                   "width": "full"
                 }
@@ -57,7 +57,7 @@
               ],
               "buttons": [
                 {
-                  "text": "Read more",
+                  "text": "CMS WIRE",
                   "url": "http://www.google.com",
                   "width": "full"
                 }
@@ -80,7 +80,7 @@
               ],
               "buttons": [
                 {
-                  "text": "Read more",
+                  "text": "CIO AUSTRALIA",
                   "url": "http://www.google.com",
                   "width": "full"
                 }
