Image - added schema validation

--- a/packages/components/bolt-image/src/image.twig
+++ b/packages/components/bolt-image/src/image.twig
@@ -147,3 +147,7 @@
     {% endif %}
   {% endblock %}
 </bolt-image>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-image/image.schema.yml', _self) }}
+{% endif %}
