--- a/apps/pattern-lab--workshop/src/_patterns/02-components/logo/05-logo.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/logo/05-logo.twig
@@ -1,5 +1,4 @@
 {% include "@bolt-components-logo/logo.twig" with {
-  logo: {
-    url: "/bolt-logo.svg"
-  }
+  src: "/images/content/logos/logo-paypal.svg",
+  lazyload: false,
 } %}
