polish up card demo

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/card/10-card.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/card/10-card.twig
@@ -3,7 +3,8 @@
   contentItems: [
     {
       pattern: "image",
-      src: "/images/sample/anthem-video.jpg",
+      src: "/images/placeholders/landscape-16x9-mountains.jpg",
+      lazyload: false,
       alt: "Anthem Video"
     },
     {
