propagate first half of band demos

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/15-band-size-variation.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/15-band-size-variation.twig
@@ -3,7 +3,7 @@
 {% for size in exampleSizes %}
   <p>Size: {{ size }}</p>
   {% include "@bolt-components-band/band.twig" with {
-    content: "Hello world!",
+    content: "This band is "~size,
     size: size,
   } only %}
 {% endfor %}
